--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -5,7 +5,7 @@
         <thead>
             <th>Description</th>
             <th>Target Date</th>
-            <th>Is done?</th>
+            <th>Is it done?</th>
             <th>Update</th>
             <th>Delete</th>
         </thead>
