--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,8 +2,8 @@
 <div class="container">
     <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
     <div>
-        <!-- User Name: <input type="text" name="username" [(ngModel)]="username"> -->
-        User Name: <input type="text" name="username">
+        User Name: <input type="text" name="username" [(ngModel)]="username">
+        <!-- User Name: <input type="text" name="username"> -->
         Password: <input type="password" name="password" [(ngModel)]="password">
         <!-- <button (click)=handleLogin() class="btn btn-success">Login</button> -->
         <!-- <button (click)=handleBasicAuthLogin() class="btn btn-success">Login</button> -->
